# spotify-control-panel

./: .gcloudignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  allowed_emails.txt.example
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_accounts_table.py  23e91dd766df_add_sort_order_to_accounts.py
backend/app/: config.py  database.py  main.py  models.py  session.py
backend/app/middleware/: auth.py
backend/app/routers/: auth.py  google_auth.py  playback.py
backend/app/services/: account_manager.py  spotify.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: spotify.ts
frontend/src/components/: AccountCard.tsx  AddAccount.tsx  Dashboard.tsx  LoginPage.tsx  NowPlaying.tsx  PlaybackControls.tsx
frontend/src/hooks/: usePlaybackState.ts
